[project]
name = "data-app"
version = "0.1.0"
description = "Data App"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "jinja2>=3.1",
    "discord-py>=2.6.4",
    "aiosqlite>=0.22.1",
    "bitcoinlib>=0.7.7",
    "requests>=2.32.5",
]
